--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-11 19:29+0300\n"
+"POT-Creation-Date: 2024-11-11 22:12+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -307,7 +307,10 @@ msgstr "Kemampuan ID harus berbentuk angka"
 #: player/views/expense_energy.py:30 player/views/expense_energy.py:43
 #: player/views/expense_energy.py:65 player/views/expense_energy.py:73
 #: player/views/expense_energy.py:83 player/views/full_auto_allow.py:43
-#: player/views/full_auto_allow.py:59 player/views/new_player.py:185
+#: player/views/full_auto_allow.py:59
+#: player/views/game_event/buy_test_prizes.py:39
+#: player/views/game_event/buy_test_prizes.py:47
+#: player/views/game_event/buy_test_prizes.py:76 player/views/new_player.py:185
 #: player/views/new_player.py:198 player/views/open_lootboxes.py:27
 #: player/views/open_lootboxes.py:38 player/views/open_lootboxes.py:49
 #: player/views/open_lootboxes.py:59 player/views/open_lootboxes.py:134
@@ -2502,8 +2505,9 @@ msgstr "Tidak terdapat penyimpanan di wilayah ini"
 #: player/views/customization/plane/choose_plane.py:59
 #: player/views/customization/plane/clear_plane_nick.py:61
 #: player/views/customization/plane/set_plane_nick.py:80
-#: region/views/do_mining.py:443 region/views/map/get_residency.py:155
-#: region/views/map/plane_info.py:41 region/views/map/region_info.py:51
+#: player/views/game_event/buy_test_prizes.py:74 region/views/do_mining.py:443
+#: region/views/map/get_residency.py:155 region/views/map/plane_info.py:41
+#: region/views/map/region_info.py:51
 #: storage/views/assets/assets_destroy.py:138
 #: storage/views/assets/assets_transfer.py:246
 #: storage/views/assets/storage_move.py:108
@@ -7455,6 +7459,60 @@ msgctxt "status"
 msgid "пополнить"
 msgstr "isi ulang"
 
+#: player/templates/player/redesign/premium_shop.html:22
+msgctxt "shop"
+msgid "Временный порядок оплаты наборов Премиум-магазина"
+msgstr ""
+
+#: player/templates/player/redesign/premium_shop.html:25
+msgctxt "shop"
+msgid "В данный момент все пожертвования на развитие игры принимаются лично"
+msgstr ""
+
+#: player/templates/player/redesign/premium_shop.html:26
+msgctxt "shop"
+msgid "Администратором"
+msgstr ""
+
+#: player/templates/player/redesign/premium_shop.html:33
+msgctxt "shop"
+msgid "30 дней"
+msgstr ""
+
+#: player/templates/player/redesign/premium_shop.html:86
+#, fuzzy
+#| msgid "Золото"
+msgctxt "shop"
+msgid "золото"
+msgstr "Emas"
+
+#: player/templates/player/redesign/premium_shop.html:93
+#, fuzzy
+#| msgctxt "daily_header"
+#| msgid "за день!"
+msgctxt "shop"
+msgid "деньги"
+msgstr "per hari!"
+
+#: player/templates/player/redesign/premium_shop.html:95
+#, fuzzy
+#| msgid "беспартийный"
+msgctxt "shop"
+msgid "бесплатно"
+msgstr "tidak terafiliasi"
+
+#: player/templates/player/redesign/premium_shop.html:104
+msgctxt "shop"
+msgid "Курсовая разница стоимости товаров"
+msgstr ""
+
+#: player/templates/player/redesign/premium_shop.html:107
+msgctxt "shop"
+msgid ""
+"Обращаем ваше внимание, что конечная стоимость наборов зависит от валюты и "
+"методов оплаты, и может включать в себя дополнительные комиссии и сборы."
+msgstr ""
+
 #: player/templates/player/redesign/profile.html:99
 #: player/templates/player/redesign/view_profile.html:72
 msgctxt "profile"
@@ -8189,6 +8247,31 @@ msgctxt "game_event"
 msgid "С годовщиной сервера Wild Politics!"
 msgstr ""
 
+#: player/views/game_event/buy_test_prizes.py:37
+#, fuzzy
+#| msgid "Некорректное значение"
+msgctxt "shop"
+msgid "Некорректно указан товар"
+msgstr "Nominal salah"
+
+#: player/views/game_event/buy_test_prizes.py:38
+#: player/views/game_event/buy_test_prizes.py:46
+#: player/views/game_event/buy_test_prizes.py:75
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "Перемещение товаров"
+msgctxt "shop"
+msgid "Получение бонуса"
+msgstr "Pemindahan penyimpanan"
+
+#: player/views/game_event/buy_test_prizes.py:45
+#, fuzzy
+#| msgctxt "no_storage"
+#| msgid "Стоимость создания"
+msgctxt "shop"
+msgid "Этот товар уже куплен вами"
+msgstr "Biaya produksi"
+
 #: player/views/game_event/new_year.py:43
 msgctxt "game_event_ny"
 msgid "С новым годом!"
@@ -8292,6 +8375,14 @@ msgstr "Karakter baru"
 msgctxt "new_player"
 msgid "Ошибка в форме профиля"
 msgstr "Pembuatan profil gagal"
+
+#: player/views/premium_shop.py:30
+#, fuzzy
+#| msgctxt "profile"
+#| msgid "премиум-аккаунт"
+msgctxt "shop"
+msgid "Премиум-магазин"
+msgstr "akun premium"
 
 #: player/views/set_language.py:38
 msgid "Такого языка в игре нет"
