--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-11 22:12+0300\n"
-"PO-Revision-Date: 2024-11-11 22:28+0300\n"
+"PO-Revision-Date: 2024-11-11 23:39+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -6460,12 +6460,12 @@ msgstr "30 days"
 #: player/templates/player/redesign/premium_shop.html:86
 msgctxt "shop"
 msgid "золото"
-msgstr "gold"
+msgstr "Gold"
 
 #: player/templates/player/redesign/premium_shop.html:93
 msgctxt "shop"
 msgid "деньги"
-msgstr "cash"
+msgstr "Cash"
 
 #: player/templates/player/redesign/premium_shop.html:95
 msgctxt "shop"
