--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-11-12 20:35+0300\n"
-"PO-Revision-Date: 2024-11-12 20:37+0300\n"
+"PO-Revision-Date: 2024-11-13 22:36+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2633,7 +2633,7 @@ msgid ""
 "Это был последний самолёт, успевший покинуть город. Мы в безопасности, но "
 "впереди – неизвестность."
 msgstr ""
-"This was the last plane to leave the city. We are safe, but ahead lies "
+"This was the last plane which left the city. We are safe, but ahead lies "
 "uncertainty."
 
 #: education/templates/education/edu_lists/list_5.html:76
