--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-12 20:35+0300\n"
-"PO-Revision-Date: 2024-11-13 22:36+0300\n"
+"POT-Creation-Date: 2024-11-14 23:44+0300\n"
+"PO-Revision-Date: 2024-11-14 23:55+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2529,12 +2529,12 @@ msgstr ""
 "The protests and unrest in the streets have escalated into a revolution. We "
 "are organizing an emergency evacuation of the parliament members."
 
-#: education/templates/education/edu_lists/list_4.html:107
+#: education/templates/education/edu_lists/list_4.html:110
 msgctxt "education"
 msgid "Ваша решимость отправиться на передовую вызывает восхищение."
 msgstr "Your determination to go to the front lines is truly admirable."
 
-#: education/templates/education/edu_lists/list_4.html:111
+#: education/templates/education/edu_lists/list_4.html:114
 msgctxt "education"
 msgid ""
 "Помощь правительственным силам сейчас как никогда необходима. Вы будете "
@@ -2543,12 +2543,12 @@ msgstr ""
 "Support for the government forces is more crucial than ever. You will "
 "command a special self-defense unit for the capital."
 
-#: education/templates/education/edu_lists/list_4.html:115
+#: education/templates/education/edu_lists/list_4.html:118
 msgctxt "education"
 msgid "Добро пожаловать, командир. Ваше присутствие вдохновляет бойцов!"
 msgstr "Welcome, commander. Your presence inspires the fighters!"
 
-#: education/templates/education/edu_lists/list_4.html:119
+#: education/templates/education/edu_lists/list_4.html:122
 msgctxt "education"
 msgid ""
 "В вашем распоряжении 100 единиц энергии для управления действиями войск. Мы "
@@ -2557,7 +2557,7 @@ msgstr ""
 "You have 100 units of energy at your disposal to manage the troops' actions. "
 "We are ready to follow your command to repel the enemy's attack."
 
-#: education/templates/education/edu_lists/list_4.html:123
+#: education/templates/education/edu_lists/list_4.html:126
 msgctxt "education"
 msgid ""
 "В вашем распоряжении находятся различные подразделения, и для вашего "
@@ -2566,7 +2566,7 @@ msgstr ""
 "You have various units at your disposal, and for your convenience, I’ve "
 "already assembled an operational squad for the first attack."
 
-#: education/templates/education/edu_lists/list_4.html:127
+#: education/templates/education/edu_lists/list_4.html:130
 msgctxt "education"
 msgid ""
 "Нажмите кнопку «в бой», чтобы начать операцию и потратить первые 100 единиц "
@@ -2575,7 +2575,7 @@ msgstr ""
 "Click the 'Fight' button to begin the operation and spend the first 100 "
 "units of energy."
 
-#: education/templates/education/edu_lists/list_4.html:132
+#: education/templates/education/edu_lists/list_4.html:135
 msgctxt "education"
 msgid ""
 "Я вижу, что вы на посту уже вторые сутки… Вот, принесла вам кофе, чтобы "
@@ -2584,7 +2584,7 @@ msgstr ""
 "I see you’ve been on duty for two days straight... Here, I brought you some "
 "coffee to help recharge your energy."
 
-#: education/templates/education/edu_lists/list_4.html:136
+#: education/templates/education/edu_lists/list_4.html:139
 msgctxt "education"
 msgid ""
 "Не забывайте заботиться о себе! Кнопка «пополнить энергию» поможет вам "
@@ -2593,7 +2593,7 @@ msgstr ""
 "Don’t forget to take care of yourself! The 'Refill Energy' button will help "
 "you regain 100 energy units."
 
-#: education/templates/education/edu_lists/list_4.html:141
+#: education/templates/education/edu_lists/list_4.html:144
 msgctxt "education"
 msgid ""
 "Левый фланг начинает ослабевать. Предлагаю направить туда дополнительные "
@@ -2602,14 +2602,14 @@ msgstr ""
 "The left flank is starting to weaken. I suggest we send additional forces "
 "there for support."
 
-#: education/templates/education/edu_lists/list_4.html:146
+#: education/templates/education/edu_lists/list_4.html:149
 msgctxt "education"
 msgid "Командир, ситуация выходит из-под контроля. Враг прорывается."
 msgstr ""
 "Commander, the situation is slipping out of control. The enemy is breaking "
 "through."
 
-#: education/templates/education/edu_lists/list_4.html:150
+#: education/templates/education/edu_lists/list_4.html:153
 msgctxt "education"
 msgid ""
 "Вам нужно немедленно покинуть штаб — здесь скоро будет жарко. Мы будем "
@@ -4937,7 +4937,7 @@ msgid "Отмена"
 msgstr "Cancel"
 
 #: party/templates/party/redesign/new_party.html:15
-#: party/views/management/new_party.py:85
+#: party/views/management/new_party.py:86
 msgctxt "new_party"
 msgid "Новая партия"
 msgstr "New party"
@@ -5320,12 +5320,12 @@ msgctxt "party_manage"
 msgid "Выдано %(gold_sum)s золота"
 msgstr "%(gold_sum)s gold issued"
 
-#: party/views/management/new_party.py:46
+#: party/views/management/new_party.py:48
 msgctxt "party_manage"
 msgid "Глава партии"
 msgstr "Party leader"
 
-#: party/views/management/new_party.py:49
+#: party/views/management/new_party.py:52
 msgctxt "party_manage"
 msgid "Новый игрок партии"
 msgstr "New party member"
@@ -6116,6 +6116,301 @@ msgstr ""
 msgctxt "game_event"
 msgid "С новым годом!"
 msgstr "Merry Cristmas and Happy New Year!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:10
+#: player/views/game_event/play_market_event.py:29
+msgctxt "event"
+msgid "Наступление на Google Play"
+msgstr "Game beginning on Google Play"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:22
+msgctxt "event"
+msgid "Уважаемые игроки!"
+msgstr "Dear players!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:28
+msgctxt "event"
+msgid "Вы - самая важная часть проекта."
+msgstr "You are the most important part of the project."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:31
+msgctxt "event"
+msgid ""
+"Каждый раз, когда вас становится больше, для меня это - большой праздник!"
+msgstr "Every time more of you join, it's a big celebration for me!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:37
+msgctxt "event"
+msgid "Наша игра преодолела очередной важный рубеж -"
+msgstr "Our game has reached another important milestone –"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:40
+msgctxt "event"
+msgid "мы стали доступны для миллиардов пользователей Google Play."
+msgstr "we are now available to billions of Google Play users."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:46
+msgctxt "event"
+msgid ""
+"Я надеюсь, что это событие станет мощным импульсом для роста онлайна, а вы "
+"поддержите игру в такой важный день!"
+msgstr ""
+"I hope this event will be a powerful boost for the growth of the online "
+"community, and that you will support the game on this important day!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:52
+msgctxt "event"
+msgid "Начинаем наступление на Google Play!"
+msgstr "We are launching the assault on Google Play!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:58
+msgctxt "event"
+msgid ""
+"В наступление не ходят без припасов. Я подготовил их для вас в разеделе "
+"«Магазин» вашего профиля."
+msgstr ""
+"No one goes into an assault without supplies. I've prepared them for you in "
+"the \"Store\" section of your profile."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:66
+msgctxt "event"
+msgid "золота"
+msgstr "of gold"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:69
+msgctxt "event"
+msgid ""
+"и $500 000 доступны для получения в актуальной версии мобильного приложения "
+"WP."
+msgstr ""
+"and $500,000 are available to claim in the latest version of the WP mobile "
+"app."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:75
+msgctxt "event"
+msgid ""
+"Чтобы занять первый плацдарм, а именно - вообще появиться в поисковой выдаче "
+"магазина приложений, нам нужно заявить о себе."
+msgstr ""
+"To secure the first foothold, namely, to appear in the search results of the "
+"app store, we need to make ourselves known."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:76
+msgctxt "event"
+msgid "В этом нам помогут"
+msgstr "App"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:79
+msgctxt "event"
+msgid "загрузки"
+msgstr "downloads"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:82
+msgctxt "event"
+msgid "приложения, его"
+msgstr ", its"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:85
+msgctxt "event"
+msgid "оценки"
+msgstr "ratings"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:88
+msgctxt "event"
+msgid ", а самое главное - "
+msgstr ", and most importantly—"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:91
+msgctxt "event"
+msgid "отзывы"
+msgstr "reviews"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:94
+msgctxt "event"
+msgid ", живые и содержательные."
+msgstr ", genuine and detailed—will help us with this."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:100
+msgctxt "event"
+msgid ""
+"Вспомните себя - стали бы вы скачивать неизвестное приложение, если о нём "
+"ничего нельзя узнать заранее от тех, кто уже его скачивал?"
+msgstr ""
+"Think back to when you first started using apps—would you download an "
+"unknown app if you couldn't find any information about it from those who had "
+"already downloaded it?"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:101
+msgctxt "event"
+msgid ""
+"Нам нужно показать, что игра растёт и развивается, и с каждым новым игроком, "
+"с каждой созданной партией становится только интереснее!"
+msgstr ""
+"We need to show that the game is growing and evolving, and with each new "
+"player, with every new party created, it only gets more exciting!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:107
+msgctxt "event"
+msgid "Поэтому, отложите односложные и бессвязные комментарии на другой раз."
+msgstr "So, save the one-word and incoherent comments for another time."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:110
+msgctxt "event"
+msgid "Наша задача - привлечь максимум новичков!"
+msgstr "Our goal is to attract as many newcomers as possible!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:116
+msgctxt "event"
+msgid "К слову, о новичках"
+msgstr "By the way, about the newcomers."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:127
+msgctxt "event"
+msgid ""
+"На момент перед публикацией приложения предварительную регистрацию в WP "
+"оформили более 600 человек."
+msgstr ""
+"At the time before the app's release, more than 600 people had pre-"
+"registered for WP."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:132
+msgctxt "event"
+msgid ""
+"Да, некоторая часть из них - это вы, опытные игроки. Но всё же, поддержите "
+"тех, кто зайдёт в игру впервые. Пригласите в партию, поделитесь игровой "
+"валютой и гайдом, позовите в чаты."
+msgstr ""
+"Yes, some of them are you, experienced players. But still, support those who "
+"are entering the game for the first time. Invite them to your party, share "
+"in-game currency and guides, and invite them to the chats."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:140
+msgctxt "event"
+msgid ""
+"Сейчас в игре активен новый сезон программы \"Пригласи друга\" - и это "
+"отличный шанс начать игру для них, и попасть в топ - для вас!"
+msgstr ""
+"The new season of the \"Invite a Friend\" program is now active in the game "
+"– and it's a great opportunity for them to start the game, and for you to "
+"make it to the top!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:142
+msgctxt "event"
+msgid "Тем более что в игру планируется ввести"
+msgstr "Moreover, the game plans to introduce a "
+
+#: player/templates/player/redesign/game_event/play_market_event.html:144
+msgctxt "event"
+msgid "медаль"
+msgstr "\"Mentor\""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:147
+msgctxt "event"
+msgid "\"наставника\", которая станет отличным украшением вашего профиля :)"
+msgstr "medal, which will make a great addition to your profile :)"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:165
+msgctxt "event"
+msgid "Нужно больше золота?"
+msgstr "Need more gold?"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:172
+msgctxt "event"
+msgid "Можем устроить!"
+msgstr "We can help you!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:173
+msgctxt "event"
+msgid "В Telegram создан"
+msgstr "A separate chat has been created"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:175
+msgctxt "event"
+msgid "отдельный чат"
+msgstr "on Telegram"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:177
+msgctxt "event"
+msgid ""
+"где вы можете опубликовать скриншоты своих отзывов с Play Market, сопроводив "
+"их своим игровым ID."
+msgstr ""
+"where you can post screenshots of your reviews from the Play Market, along "
+"with your in-game ID."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:178
+msgctxt "event"
+msgid ""
+"Раз в неделю я буду выбирать случайный скриншот, проверять его реальность, и "
+"награждать игрока!"
+msgstr ""
+"Once a week, I will select a random screenshot, verify its authenticity, and "
+"reward the player!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:189
+msgctxt "event"
+msgid "Награда будет состоять из&nbsp;"
+msgstr "The reward will consist of&nbsp;"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:190
+msgctxt "event"
+msgid "на среднюю оценку в Play Market"
+msgstr "the average rating on the Play Market."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:198
+msgctxt "event"
+msgid ""
+"И да, это тот случай, когда чем больше разных отзывов - тем лучше! Но не "
+"забывайте, что несколько персонажей в игре запрещены :)"
+msgstr ""
+"And yes, this is the case where the more different reviews, the better! But "
+"don’t forget that multiple characters in the game are prohibited :)"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:201
+msgctxt "event"
+msgid ""
+"Дополнительно, я отмечу призовым золотом самые содержательные и интересные "
+"отзывы в Play Market - как обычно."
+msgstr ""
+"Additionally, I will reward the most meaningful and interesting reviews on "
+"Play Market with prize gold – as usual."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:208
+msgctxt "event"
+msgid "Награды для всех"
+msgstr "Rewards for everyone"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:212
+msgctxt "event"
+msgid ""
+"Как и во всех событиях нашей игры, помимо личной прогрессии будет "
+"общесерверная."
+msgstr ""
+"As with all events in our game, in addition to personal progress, there will "
+"be a server-wide progression."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:215
+msgctxt "event"
+msgid ""
+"Каждое значительное число скачиваний за время Наступления будет отмечено "
+"призами и бонус-кодами."
+msgstr ""
+"Each significant number of downloads during the Offensive will be rewarded "
+"with prizes and bonus codes."
+
+#: player/templates/player/redesign/game_event/play_market_event.html:223
+msgctxt "event"
+msgid ""
+"Также, приглашаем вас в наши социальные сети - Вконтакте и Telegram, где "
+"будут проводиться различные конкурсы и активности!"
+msgstr ""
+"We also invite you to join our social media - VKontakte and Telegram, where "
+"various contests and activities will be held!"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:227
+msgctxt "event"
+msgid "Спасибо за внимание!"
+msgstr "Thank you for your attention!"
 
 #: player/templates/player/redesign/header.html:200
 msgctxt "education"
@@ -10981,9 +11276,6 @@ msgstr "Wars"
 #~ msgctxt "w_trading"
 #~ msgid "Укажите товар"
 #~ msgstr "Select a good in filters"
-
-#~ msgid "Население региона"
-#~ msgstr "Region pop"
 
 #~ msgctxt "factory"
 #~ msgid "Внезапно!"
