--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-12 20:35+0300\n"
+"POT-Creation-Date: 2024-11-14 23:44+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3094,19 +3094,19 @@ msgid ""
 "эвакуацию парламентариев."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:107
+#: education/templates/education/edu_lists/list_4.html:110
 msgctxt "education"
 msgid "Ваша решимость отправиться на передовую вызывает восхищение."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:111
+#: education/templates/education/edu_lists/list_4.html:114
 msgctxt "education"
 msgid ""
 "Помощь правительственным силам сейчас как никогда необходима. Вы будете "
 "командовать отдельным подразделением самообороны столицы."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:115
+#: education/templates/education/edu_lists/list_4.html:118
 #, fuzzy
 #| msgctxt "mining"
 #| msgid "Количество Энергии должно быть положительным"
@@ -3114,54 +3114,54 @@ msgctxt "education"
 msgid "Добро пожаловать, командир. Ваше присутствие вдохновляет бойцов!"
 msgstr "Jumlah energi tidak boleh minus"
 
-#: education/templates/education/edu_lists/list_4.html:119
+#: education/templates/education/edu_lists/list_4.html:122
 msgctxt "education"
 msgid ""
 "В вашем распоряжении 100 единиц энергии для управления действиями войск. Мы "
 "готовы действовать по вашему приказу, чтобы отбить натиск противника."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:123
+#: education/templates/education/edu_lists/list_4.html:126
 msgctxt "education"
 msgid ""
 "В вашем распоряжении находятся различные подразделения, и для вашего "
 "удобства мной уже собран оперативный отряд для первой атаки."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:127
+#: education/templates/education/edu_lists/list_4.html:130
 msgctxt "education"
 msgid ""
 "Нажмите кнопку «в бой», чтобы начать операцию и потратить первые 100 единиц "
 "энергии."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:132
+#: education/templates/education/edu_lists/list_4.html:135
 msgctxt "education"
 msgid ""
 "Я вижу, что вы на посту уже вторые сутки… Вот, принесла вам кофе, чтобы "
 "восстановить силы."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:136
+#: education/templates/education/edu_lists/list_4.html:139
 msgctxt "education"
 msgid ""
 "Не забывайте заботиться о себе! Кнопка «пополнить энергию» поможет вам "
 "получить еще 100 единиц энергии."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:141
+#: education/templates/education/edu_lists/list_4.html:144
 msgctxt "education"
 msgid ""
 "Левый фланг начинает ослабевать. Предлагаю направить туда дополнительные "
 "силы для поддержки."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:146
+#: education/templates/education/edu_lists/list_4.html:149
 msgctxt "education"
 msgid "Командир, ситуация выходит из-под контроля. Враг прорывается."
 msgstr ""
 
-#: education/templates/education/edu_lists/list_4.html:150
+#: education/templates/education/edu_lists/list_4.html:153
 msgctxt "education"
 msgid ""
 "Вам нужно немедленно покинуть штаб — здесь скоро будет жарко. Мы будем "
@@ -5762,7 +5762,7 @@ msgid "Отмена"
 msgstr "Batal"
 
 #: party/templates/party/redesign/new_party.html:15
-#: party/views/management/new_party.py:85
+#: party/views/management/new_party.py:86
 #, fuzzy
 #| msgctxt "overview"
 #| msgid "партии"
@@ -6293,7 +6293,7 @@ msgctxt "party_manage"
 msgid "Выдано %(gold_sum)s золота"
 msgstr ""
 
-#: party/views/management/new_party.py:46
+#: party/views/management/new_party.py:48
 #, fuzzy
 #| msgctxt "overview"
 #| msgid "партии"
@@ -6301,7 +6301,7 @@ msgctxt "party_manage"
 msgid "Глава партии"
 msgstr "partai"
 
-#: party/views/management/new_party.py:49
+#: party/views/management/new_party.py:52
 #, fuzzy
 #| msgid "должность в партии"
 msgctxt "party_manage"
@@ -7145,6 +7145,295 @@ msgstr ""
 msgctxt "game_event"
 msgid "С новым годом!"
 msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:10
+#: player/views/game_event/play_market_event.py:29
+#, fuzzy
+#| msgid "Население региона"
+msgctxt "event"
+msgid "Наступление на Google Play"
+msgstr "Populasi wilayah"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:22
+#, fuzzy
+#| msgctxt "game_event"
+#| msgid "Награды события:"
+msgctxt "event"
+msgid "Уважаемые игроки!"
+msgstr "Hadiah:"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:28
+#, fuzzy
+#| msgctxt "mining"
+#| msgid "Ошибка автоматической добычи ресурсов"
+msgctxt "event"
+msgid "Вы - самая важная часть проекта."
+msgstr "Penambangan otomatis gagal"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:31
+msgctxt "event"
+msgid ""
+"Каждый раз, когда вас становится больше, для меня это - большой праздник!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:37
+msgctxt "event"
+msgid "Наша игра преодолела очередной важный рубеж -"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:40
+msgctxt "event"
+msgid "мы стали доступны для миллиардов пользователей Google Play."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:46
+msgctxt "event"
+msgid ""
+"Я надеюсь, что это событие станет мощным импульсом для роста онлайна, а вы "
+"поддержите игру в такой важный день!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:52
+msgctxt "event"
+msgid "Начинаем наступление на Google Play!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:58
+msgctxt "event"
+msgid ""
+"В наступление не ходят без припасов. Я подготовил их для вас в разеделе "
+"«Магазин» вашего профиля."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:66
+#, fuzzy
+#| msgid "Золото"
+msgctxt "event"
+msgid "золота"
+msgstr "Emas"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:69
+msgctxt "event"
+msgid ""
+"и $500 000 доступны для получения в актуальной версии мобильного приложения "
+"WP."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:75
+msgctxt "event"
+msgid ""
+"Чтобы занять первый плацдарм, а именно - вообще появиться в поисковой выдаче "
+"магазина приложений, нам нужно заявить о себе."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:76
+msgctxt "event"
+msgid "В этом нам помогут"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:79
+#, fuzzy
+#| msgid "Загрузить"
+msgctxt "event"
+msgid "загрузки"
+msgstr "Unggah"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:82
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "Продление"
+msgctxt "event"
+msgid "приложения, его"
+msgstr "Pembaruan"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:85
+msgctxt "event"
+msgid "оценки"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:88
+msgctxt "event"
+msgid ", а самое главное - "
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:91
+msgctxt "event"
+msgid "отзывы"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:94
+msgctxt "event"
+msgid ", живые и содержательные."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:100
+msgctxt "event"
+msgid ""
+"Вспомните себя - стали бы вы скачивать неизвестное приложение, если о нём "
+"ничего нельзя узнать заранее от тех, кто уже его скачивал?"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:101
+msgctxt "event"
+msgid ""
+"Нам нужно показать, что игра растёт и развивается, и с каждым новым игроком, "
+"с каждой созданной партией становится только интереснее!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:107
+msgctxt "event"
+msgid "Поэтому, отложите односложные и бессвязные комментарии на другой раз."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:110
+msgctxt "event"
+msgid "Наша задача - привлечь максимум новичков!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:116
+msgctxt "event"
+msgid "К слову, о новичках"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:127
+msgctxt "event"
+msgid ""
+"На момент перед публикацией приложения предварительную регистрацию в WP "
+"оформили более 600 человек."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:132
+msgctxt "event"
+msgid ""
+"Да, некоторая часть из них - это вы, опытные игроки. Но всё же, поддержите "
+"тех, кто зайдёт в игру впервые. Пригласите в партию, поделитесь игровой "
+"валютой и гайдом, позовите в чаты."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:140
+msgctxt "event"
+msgid ""
+"Сейчас в игре активен новый сезон программы \"Пригласи друга\" - и это "
+"отличный шанс начать игру для них, и попасть в топ - для вас!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:142
+msgctxt "event"
+msgid "Тем более что в игру планируется ввести"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:144
+msgctxt "event"
+msgid "медаль"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:147
+msgctxt "event"
+msgid "\"наставника\", которая станет отличным украшением вашего профиля :)"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:165
+#, fuzzy
+#| msgctxt "assets"
+#| msgid "недостаточно товара"
+msgctxt "event"
+msgid "Нужно больше золота?"
+msgstr "barang tidak cukup"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:172
+msgctxt "event"
+msgid "Можем устроить!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:173
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "создать"
+msgctxt "event"
+msgid "В Telegram создан"
+msgstr "membuat"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:175
+#, fuzzy
+#| msgctxt "overview"
+#| msgid "региона"
+msgctxt "event"
+msgid "отдельный чат"
+msgstr "wilayah"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:177
+msgctxt "event"
+msgid ""
+"где вы можете опубликовать скриншоты своих отзывов с Play Market, сопроводив "
+"их своим игровым ID."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:178
+msgctxt "event"
+msgid ""
+"Раз в неделю я буду выбирать случайный скриншот, проверять его реальность, и "
+"награждать игрока!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:189
+msgctxt "event"
+msgid "Награда будет состоять из&nbsp;"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:190
+msgctxt "event"
+msgid "на среднюю оценку в Play Market"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:198
+msgctxt "event"
+msgid ""
+"И да, это тот случай, когда чем больше разных отзывов - тем лучше! Но не "
+"забывайте, что несколько персонажей в игре запрещены :)"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:201
+msgctxt "event"
+msgid ""
+"Дополнительно, я отмечу призовым золотом самые содержательные и интересные "
+"отзывы в Play Market - как обычно."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:208
+#, fuzzy
+#| msgctxt "game_event"
+#| msgid "Награды события:"
+msgctxt "event"
+msgid "Награды для всех"
+msgstr "Hadiah:"
+
+#: player/templates/player/redesign/game_event/play_market_event.html:212
+msgctxt "event"
+msgid ""
+"Как и во всех событиях нашей игры, помимо личной прогрессии будет "
+"общесерверная."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:215
+msgctxt "event"
+msgid ""
+"Каждое значительное число скачиваний за время Наступления будет отмечено "
+"призами и бонус-кодами."
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:223
+msgctxt "event"
+msgid ""
+"Также, приглашаем вас в наши социальные сети - Вконтакте и Telegram, где "
+"будут проводиться различные конкурсы и активности!"
+msgstr ""
+
+#: player/templates/player/redesign/game_event/play_market_event.html:227
+#, fuzzy
+#| msgid "Финансирование"
+msgctxt "event"
+msgid "Спасибо за внимание!"
+msgstr "Keuangan"
 
 #: player/templates/player/redesign/header.html:200
 msgctxt "education"
@@ -12492,9 +12781,6 @@ msgstr "perang"
 #~ msgctxt "w_trading"
 #~ msgid "Укажите товар"
 #~ msgstr "pilih penyimpanan"
-
-#~ msgid "Население региона"
-#~ msgstr "Populasi wilayah"
 
 #, fuzzy
 #~| msgctxt "goods"
